--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -284,12 +284,12 @@
 
                     & #nomCommande {
                         font-weight: bold;
-                        width: 40%;
+                        width: 50%;
                         text-align: center;
                     }
-                    & #couleurCommande, #quantitéCommande, #prixCommande{
+                    & #couleurCommande, #prixCommande{
                         font-weight: bold;
-                        width: 20%;
+                        width: 25%;
                         text-align: center;
                     }
                 }
@@ -302,7 +302,7 @@
                     
 
                     & #myDetailName{
-                        width: 40%;
+                        width: 50%;
                         text-align: center;
                         font-size: .8em; 
                         display: flex;
@@ -321,8 +321,8 @@
                         }
                     }
 
-                    & #myDetailColor, #myDetailNumber, #myDetailPrice{
-                        width: 20%;
+                    & #myDetailColor, #myDetailPrice{
+                        width: 25%;
                         margin: auto;
                         text-align: center;
                         font-size: .8em;
@@ -342,6 +342,7 @@
 
                 & #divTotal{
                     width: 100%;
+                    display: flex;
 
                     & #totalPrice{
                         width: 66%;
@@ -351,6 +352,7 @@
 
                     & #totalPriceCalcul{
                         width: 25%;
+                        text-align: right;
 
                     }
                 }
