--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 body {
   height: 100vh;
   width: 100vw;
@@ -341,12 +340,12 @@ body {
 }
 #page_panier #monPanier #infoPanier #detailCommande #titreCommande #nomCommande {
   font-weight: bold;
-  width: 40%;
+  width: 50%;
   text-align: center;
 }
-#page_panier #monPanier #infoPanier #detailCommande #titreCommande #couleurCommande, #page_panier #monPanier #infoPanier #detailCommande #titreCommande #quantitéCommande, #page_panier #monPanier #infoPanier #detailCommande #titreCommande #prixCommande {
+#page_panier #monPanier #infoPanier #detailCommande #titreCommande #couleurCommande, #page_panier #monPanier #infoPanier #detailCommande #titreCommande #prixCommande {
   font-weight: bold;
-  width: 20%;
+  width: 25%;
   text-align: center;
 }
 #page_panier #monPanier #infoPanier #detailCommande .detailOursonAchat {
@@ -356,7 +355,7 @@ body {
   margin-bottom: 10px;
 }
 #page_panier #monPanier #infoPanier #detailCommande .detailOursonAchat #myDetailName {
-  width: 40%;
+  width: 50%;
   text-align: center;
   font-size: 0.8em;
   display: flex;
@@ -372,21 +371,22 @@ body {
   margin: auto;
   font-weight: bold;
 }
-#page_panier #monPanier #infoPanier #detailCommande .detailOursonAchat #myDetailColor, #page_panier #monPanier #infoPanier #detailCommande .detailOursonAchat #myDetailNumber, #page_panier #monPanier #infoPanier #detailCommande .detailOursonAchat #myDetailPrice {
-  width: 20%;
+#page_panier #monPanier #infoPanier #detailCommande .detailOursonAchat #myDetailColor, #page_panier #monPanier #infoPanier #detailCommande .detailOursonAchat #myDetailPrice {
+  width: 25%;
   margin: auto;
   text-align: center;
   font-size: 0.8em;
 }
-#page_panier #monPanier #infoPanier #detailCommande .detailOursonAchat #myDetailColor #selectNumberOrTeddies, #page_panier #monPanier #infoPanier #detailCommande .detailOursonAchat #myDetailNumber #selectNumberOrTeddies, #page_panier #monPanier #infoPanier #detailCommande .detailOursonAchat #myDetailPrice #selectNumberOrTeddies {
+#page_panier #monPanier #infoPanier #detailCommande .detailOursonAchat #myDetailColor #selectNumberOrTeddies, #page_panier #monPanier #infoPanier #detailCommande .detailOursonAchat #myDetailPrice #selectNumberOrTeddies {
   width: 50px;
   margin: auto;
 }
-#page_panier #monPanier #infoPanier #detailCommande .detailOursonAchat #myDetailColor #selectNumberOrTeddies option, #page_panier #monPanier #infoPanier #detailCommande .detailOursonAchat #myDetailNumber #selectNumberOrTeddies option, #page_panier #monPanier #infoPanier #detailCommande .detailOursonAchat #myDetailPrice #selectNumberOrTeddies option {
+#page_panier #monPanier #infoPanier #detailCommande .detailOursonAchat #myDetailColor #selectNumberOrTeddies option, #page_panier #monPanier #infoPanier #detailCommande .detailOursonAchat #myDetailPrice #selectNumberOrTeddies option {
   margin: auto;
 }
 #page_panier #monPanier #infoPanier #detailCommande #divTotal {
   width: 100%;
+  display: flex;
 }
 #page_panier #monPanier #infoPanier #detailCommande #divTotal #totalPrice {
   width: 66%;
@@ -395,6 +395,7 @@ body {
 }
 #page_panier #monPanier #infoPanier #detailCommande #divTotal #totalPriceCalcul {
   width: 25%;
+  text-align: right;
 }
 #page_panier #monPanier #div_inform_form #paragraph_inform {
   margin: 30px 0;
