--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -39,4 +39,31 @@
             }
         }
     }
+
+    &--product{
+
+        @include grande-tablette{
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            right: 0;
+        }
+        @include mobile{
+            position: relative;
+        }
+
+       
+    }
+    &--panier{
+
+        @include grande-tablette{
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            right: 0;
+        }
+        @include petite-tablette{
+            position: relative;
+        }
+    }
 }
