--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -118,6 +118,17 @@
             & .id_ourson{
                 display: flex;
                 flex-direction: row;
+
+                @include petite-tablette{
+
+                    margin: 0 auto;
+                }
+                & #id_teddy{
+
+                    @include mobile{
+                        margin: auto;
+                    }
+                }
             }   
             & p{
 
@@ -184,12 +195,20 @@
 
 #page_product{
 
+
     & .onlyTeddy{
         width: 90%;
         border: 1px solid grey ;
         border-radius: 4px;
         box-shadow: 0.2em 0.2em 0.2em 0.2em grey;
         margin: 20px auto;
+        @include grande-tablette{
+
+            margin-top: 100px;
+        }
+        @include petite-tablette{
+            margin-top: auto;
+        }
 
         & figure{
             margin: 0;
@@ -222,9 +241,15 @@
             }
             & .labelForColor{
                 margin: auto;
+
+                @include mobile{
+                    text-align: center;
+                }
                 
                 & label{
                     font-weight: bold;
+
+                    
 
                     & select{
                         width: 200px;
@@ -236,6 +261,7 @@
                         }
                     }
                 }
+                
             }
 
             & .divDescript{
@@ -281,16 +307,25 @@
                     display: flex;
                     justify-content: space-around;
                     margin-bottom: 20px;
+                    @include mobile{
+                        font-size: 0.7em;
+                    }
 
                     & #nomCommande {
                         font-weight: bold;
                         width: 50%;
                         text-align: center;
+                        @include petite-tablette{
+                            margin: auto;
+                        }
                     }
                     & #couleurCommande, #prixCommande{
                         font-weight: bold;
                         width: 25%;
                         text-align: center;
+                        @include petite-tablette{
+                            margin: auto;
+                        }
                     }
                 }
                 
@@ -306,6 +341,10 @@
                         text-align: center;
                         font-size: .8em; 
                         display: flex;
+                        justify-content: space-around;
+                        @include mobile{
+                            justify-content: space-around;
+                        }
                         
                         & #fig_pic_cart{
                             width: 30%;
