--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -39,15 +39,10 @@
             }
         }
     }
-
+    /*
     &--product{
 
-        @include grande-tablette{
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            right: 0;
-        }
+        
         @include mobile{
             position: relative;
         }
@@ -56,14 +51,15 @@
     }
     &--panier{
 
-        @include grande-tablette{
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            right: 0;
-        }
+       
         @include petite-tablette{
             position: relative;
         }
+    }*/
+    &--thanks{
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
     }
 }
