--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -8,6 +8,7 @@
     & figure{
         width: 100vw;
         margin: 0;
+        position: relative;
         & img{
             max-width: 100%;
             height: auto;
@@ -19,7 +20,6 @@
     & h1{
         position: absolute;
         top: 100px;
-        //left: 550px;
         left: 50%;
         transform: translate(-50%);
         font-size: 70px;
@@ -460,6 +460,17 @@
     text-align: center;
     margin-top: 30vh;
     transform: translateY(-50%);
+
+    @include grande-tablette{
+        font-size: 1.9em;
+    }
+    @include petite-tablette{
+        font-size: 1.4em;
+    }
+
+    @include mobile{
+        font-size: 0.8em;
+    }
 
     & #thanks{
         display: flex;
