--- a/style.css
+++ b/style.css
@@ -1,18 +1,12 @@
 body {
   height: 100vh;
   width: 100vw;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
   overflow-x: hidden;
   background-color: #f3e9f1;
   font-family: "Roboto", sans-serif;
   position: relative;
-}
-@media all and (max-width: 1024px) {
-  body {
-    margin: auto;
-    width: 100vw;
-  }
 }
 
 .button__personnalisation {
@@ -290,7 +284,7 @@ body {
 }
 @media all and (max-width: 800px) {
   #page_product .onlyTeddy {
-    margin-top: auto;
+    margin-top: 20px;
   }
 }
 #page_product .onlyTeddy figure {
@@ -521,6 +515,20 @@ body {
   color: white;
   display: flex;
   justify-content: space-around;
+  /*&--product{
+
+      @include grande-tablette {
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          right: 0;
+      }
+      @include mobile{
+          position: relative;
+      }
+
+
+  }*/
 }
 #footer div h4, .footer_catalogue div h4 {
   text-align: center;
@@ -547,19 +555,6 @@ body {
   #footer div ul li a, .footer_catalogue div ul li a {
     text-align: center;
     font-size: 0.7em;
-  }
-}
-@media all and (max-width: 1024px) {
-  #footer--product, .footer_catalogue--product {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-  }
-}
-@media all and (max-width: 640px) {
-  #footer--product, .footer_catalogue--product {
-    position: relative;
   }
 }
 @media all and (max-width: 1024px) {
