--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -69,6 +69,9 @@ header{
             height: 1000px;
             background-color: #2c3e50;
             width: 200px;
+            @include mobile{
+                height: 100vh;
+            }
 
             & a{
                 color: $blanc;
