--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -10,7 +10,9 @@
         margin: 0;
         position: relative;
         & img{
-            max-width: 100%;
+            //max-width: 100%;
+            width: 100%;
+            margin: auto;
             height: auto;
             @include grande-tablette{
                 width: 100vw;
