divers modifs css

--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -58,4 +58,11 @@
         color: $fond_bandeau;
         background-color: $vert;
     }
+    &:disabled{
+        color: black;
+        &:hover {
+            color: black;
+            background-color: black;
+        }
+    }
 }   
