--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -66,7 +66,7 @@ header{
         
         & .menu{
             //clear: left;
-            height: 1000px;
+            height: 100vh;
             background-color: #2c3e50;
             width: 200px;
             @include mobile{
